<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Application's app ID and keys -->
	<string name="parse_app_id">TVqCaEm8N44ScY0fDLx4eCuRhONTALAPbC7P0289</string>
	<string name="parse_client_key">CNgx7Wf1CNNle26yTVAi7bNGTCxVAIJd5McCxhRe</string>
	<string name="facebook_app_id">773404239346435</string>
	<string name="twitter_consumer_key">xStctYyrNHtcxyqftFBmQifAh</string>
	<string name="twitter_consumer_secret">bfmZu2aR6i2Wr0aE5FCsY88IlQQzGz5F9HvWZZcgjDmjhiYPkE</string>
	<!-- PARSE Login -->
	<string name="profile_logo_content_description">Logo</string>
	<string name="profile_title_logged_in">Your are logged in as</string>
	<string name="profile_logout_button_label">Log out</string>
	<string name="profile_title_logged_out">You must be logged in to view your profile</string>
	<string name="profile_login_button_label">Log in</string>
	<!-- =========================== Labels =========================== -->
	<string name="app_name">Tenderloin Housing Clinic</string>
	<string name="title_activity_report">Violation Report</string>
	<string name="title_activity_map">Explore Violations</string>
	   <string name="title_activity_building">Hotel Violations </string>
	
	<!-- Menu -->
	<string name="login">Log In</string>
	<string name="logout">Log Out</string>
	<string name="report">Report</string>
	<string name="cases">Cases</string>
	<string name="newCases">New Cases</string>
	<string name="myCases">My Cases</string>
	<string name="search">Search</string>
	<string name="caseByBuilding">Cases By Building</string>
	
	
	<!-- Submit a Case -->
	<string name="createReport">Create Report</string>
	<string name="violationDetails">Violation Details</string>
	<string name="personalInfo">Personal Information</string>
	<string name="issueType">Violation Type </string>
	<string name="building">Hotel </string>
	<string name="fullName">Full Name </string>
	<string name="tenantName">Tenant Name </string>
	<string name="emailOptional">Email(Optional) </string>
	<string name="tenentEmail">Tenant Email </string>
	<string name="address">Address </string>
	<string name="unitNumber">Unit </string>
	<string name="phone">Phone </string>
	<string name="tenantPhone">Tenant Phone </string>
	<string name="language">Language Spoken</string>
	<string name="isMultiUnit">Is Multi-Unit Petition?</string>
	<string name="caseDesc">Violation Description</string>
	<string name="addPhotos">Violation Pictures (Optional)</string>
	<string name="caseStatus">Case Status</string>
	<string name="caseNumber">Case Number </string>
	<string name="caseManager">Case Manager </string>
	<string name="submitDate">Submitted</string>
	
	<!-- Action Buttons -->
	<string name="submit">Submit</string>
	<string name="cancel">Cancel</string>
	<string name="edit">Edit</string>
	<string name="share">Share</string>
	<string name="viewDetails">View Violation Details</string>
	<string name="title_activity_case_list">Browse Cases</string>
	<string name="hello_world">Hello world!</string>
	<string name="action_settings">Settings</string>
</resources>
